Bug 1961191 - Check for null default FB in DoBindFB. r=aosmond, a=dsmith

In cases where there was no bound framebuffer, and we need to
change the FB state, DoBindFB may have to reset the FB state back
to a 0 value, as that may be its original state. Avoid accessing
mDefaultFB in this case.

Differential Revision: https://phabricator.services.mozilla.com/D245975